lintian-brush (0.63) UNRELEASED; urgency=medium

  * Clean up unnecessary 'dh_missing --fail-missing' when upgrading to
    debhelper 13. Closes: #959823
  * Add document start when adding new YAML files. Closes: #958413

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 May 2020 22:45:16 +0000

lintian-brush (0.62) unstable; urgency=medium

  [ Jelmer Vernooij ]
  * Bump maximum debhelper compat version in sid to 13. Closes: #958775
  * Handle old style freedesktop git URLs with /git/ prefix.
  * Don't remove name/contact from upstream metadata if different from
    copyright. Closes: #948948
  * Extract Git repository URLs from debian/watch in git mode.
  * Add fixer for uses-deprecated-adttmp.
  * Downgrade the certainty for some upstream URLs, unless they can be
    verified in some way.

  [ Niels Thykier ]
  * Migrate tmpfile to tmpfiles when upgrading to compat 13.

  [ Jelmer Vernooĳ ]
  * debian-changelog-line-too-long: Be careful about joining lines that
    aren't too long in entries that do have long lines. Closes: #959496
  * debian-source-options-has-custom-compression-settings: Don't break
    on empty debian/source/options files.
  * Add fixer for binary-control-field-duplicates-source.
  * Process overrides in unused-license-paragraph-in-dep5-copyright.
  * debian-rules-uses-unnecessary-dh-argument: Deal with argument
    negation on the % target.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 May 2020 22:16:19 +0000

lintian-brush (0.61) unstable; urgency=medium

  * Fix a bug incorrectly removing used license stanzas with license
    exceptions in debian/copyright.
  * Report when the upstream-metadata-missing-repository and upstream-
    metadata-missing-bug-tracking tags are fixed.
  * Add fixer for upstream-metadata-in-native-source.
  * Preserve @cdbs@ in debian/control.in in cdbs packages.
  * Add support for updating to Standards-Version 4.5.0 in some cases.
  * Don't create watch files for native packages.