@@ -1,3 +1,3 @@
 Fix misspelling of Close => Closes.
 Fixed-Lintian-Tags: misspelled-closes-bug
-Certainty: certain
+Certainty: likely
